Fix alignment issues

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -11,7 +11,7 @@ th.row-title {
   padding-right: 20px;
 }
 td.row-content {
-  width: 60%;
+  width: 40%;
   text-align: left;
   padding: 5px;
 }
